Recruiting Model/main/default/objects/Interview__c/Interview__c.object-meta.xml
<CustomObject>
    <description>Applicant/Application Interview data</description>
    <label>Interview</label>
    <nameField>
        <displayFormat>I{0000}</displayFormat>
        <label>Interview ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>