Recruiting Model/main/default/objects/Interview__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <formula>Application__r.Applicant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant</label>
    <type>Text</type>
</CustomField>