Recruiting Model/main/default/objects/Interview__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select the application for this interview</inlineHelpText>
    <label>Application</label>
    <referenceTo>Applications__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>