Recruiting Model/main/default/objects/Interview__c/fields/Company_Location__c.field-meta.xml
<CustomField>
    <fullName>Company_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select the company location for the interview.</inlineHelpText>
    <label>Company Location</label>
    <referenceTo>Company_Location__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>