Recruiting Model/main/default/objects/Interview__c/fields/Duration_min__c.field-meta.xml
<CustomField>
    <fullName>Duration_min__c</fullName>
    <defaultValue>30</defaultValue>
    <inlineHelpText>Please enter the duration for this interview.</inlineHelpText>
    <label>Duration (min)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>