Recruiting Model/main/default/objects/Interview__c/fields/Feedback_Count__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Count__c</fullName>
    <label>Feedback Count</label>
    <summaryForeignKey>Interview_Feedback__c.Interview__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>