Recruiting Model/main/default/objects/Interview__c/fields/Interview_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_End_Date_Time__c</fullName>
    <formula>Interview_Date_Time__c + ( Duration_min__c / 1440 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview End Date/Time</label>
    <type>DateTime</type>
</CustomField>