Recruiting Model/main/default/objects/Interview__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <inlineHelpText>Please select the type of interview being performed.</inlineHelpText>
    <label>Interview Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interview_Types</valueSetName>
    </valueSet>
</CustomField>