Recruiting Model/main/default/objects/Interview__c/fields/Job_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Job_Requisition__c</fullName>
    <formula>Application__r.Job_Requisition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please select the Job Requisition f</inlineHelpText>
    <label>Job Requisition</label>
    <type>Text</type>
</CustomField>