Recruiting Model/main/default/objects/Interview__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <formula>Application__r.Applicant__r.HR_Mobile_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Phone</label>
    <type>Text</type>
</CustomField>