Recruiting Model/main/default/objects/Interview__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>Please select the current stage.</inlineHelpText>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assign Job Requisition</fullName>
                <default>true</default>
                <label>Assign Job Requisition</label>
            </value>
            <value>
                <fullName>Assign Applicant</fullName>
            </value>
            <value>
                <fullName>Travel Procured</fullName>
            </value>
            <value>
                <fullName>Room Assigned</fullName>
            </value>
            <value>
                <fullName>Equipment Ordered</fullName>
            </value>
            <value>
                <fullName>Interviewers Assigned</fullName>
            </value>
            <value>
                <fullName>Interviewed</fullName>
            </value>
            <value>
                <fullName>Feedback Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>