Recruiting Model/main/default/objects/Interview__c/fields/Total_Interview_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Interview_Expenses__c</fullName>
    <label>Total Interview Expenses</label>
    <summarizedField>Interview_Travel_Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Interview_Travel_Expense__c.Interview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>